# research

./: .gitignore  LICENSE  README.md
llm-arbitrary-choice-study/: .env.example  .gitignore  README.md  pyproject.toml
llm-arbitrary-choice-study/.github/workflows/: ci.yml
llm-arbitrary-choice-study/configs/: models.yaml
llm-arbitrary-choice-study/data/: contexts.yaml  questions.yaml
llm-arbitrary-choice-study/results/corrections/: pair_frequency_regression.csv  per_pair_balanced.csv
llm-arbitrary-choice-study/src/llm_arbitrary_choice_study/: __init__.py  analysis.py  cli.py  config.py  db.py  openrouter.py  prompts.py  runner.py  schema.py
llm-arbitrary-choice-study/tests/: test_analysis.py  test_db.py  test_openrouter.py  test_prompts.py  test_runner.py
llm-wallet-guard-study/: README.md  justfile  pyproject.toml  skills-lock.json
llm-wallet-guard-study/prompts/: attacker_system.md  guardian_system.md
llm-wallet-guard-study/src/llm_wallet_guard_study/: __init__.py  cli.py  config.py  db.py  export.py  live_adapters.py  models.py  policy.py  prompts.py  redaction.py  runner.py  simulator_wallet.py
llm-wallet-guard-study/tests/: conftest.py  test_db.py  test_export.py  test_live_adapters.py  test_pairwise_config.py  test_policy.py  test_runner.py  test_secret_redaction.py  test_simulator_wallet.py
