[project]
name = "llm-arbitrary-choice-study"
version = "0.1.0"
description = "Reproducible tooling for a neutral forced-choice LLM behavior study"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "dreth", email = "48023588+dreth@users.noreply.github.com" },
]
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.scripts]
llm-arbitrary-choice-study = "llm_arbitrary_choice_study:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "plotly.*",
    "yaml.*",
]
ignore_missing_imports = true
